Category endpoint add
Not gonna test this, seems pretty pointless to test static data honestly.
