# backend/openapi.yaml
@@ -240,6 +240,23 @@ paths:
                 type: string
                 example: "The given category does not exist."
 
+  /public/tutorials/categories/all:
+    get:
+      tags:
+      - PUBLIC
+      summary: Gets all of the categories in an array
+      operationId: getAllCategories
+      responses:
+        200:
+          description: "Returns an array of category strings"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                  example: javascript
+
   #
   #    Get all tutorials cards for this category
   #       /public/tutorials/cards/{category}?offset=*&outset=*
