# backend/src/routes/PUBLICTutorialRoute.ts
@@ -23,5 +23,6 @@ export default class PUBLICTutorialRoute implements IRoute {
     constructor() {
         this.ROUTER.get(this.RESOURCE_LOC + "/:tutId", PUBLICTutorialController.getTutorialById);
         this.ROUTER.get(this.RESOURCE_LOC + "/cards/:category", PUBLICTutorialController.getSpecifiedTutorialCards);
+        this.ROUTER.get(this.RESOURCE_LOC + "/categories/all", PUBLICTutorialController.getAllCategories);
     }
 }
